@@ -12,9 +12,7 @@ import base.RunAsAdmin;
 import java.io.IOException;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.util.List;
 import miscellaneous.xml.MoodleXmlImporter;
-import models.questions.Question;
 import models.user.User;
 import org.junit.Test;
 import scala.jdk.javaapi.CollectionConverters;
@@ -28,9 +26,28 @@ public class MoodleImporterTest extends IntegrationTestCase {
         User user = getLoggerUser();
         running(app, () -> {
             MoodleXmlImporter converter = app.injector().instanceOf(MoodleXmlImporter.class);
-            List<Question> questions = CollectionConverters.asJava(converter.convert(content, user));
+            var report = converter.convert(content, user);
+            var questions = CollectionConverters.asJava(report._1);
+            var errors = CollectionConverters.asJava(report._2);
             assertThat(questions).hasSize(1);
-            assertThat(questions.get(0).getTags()).hasSize(2);
+            assertThat(questions.getFirst().getTags()).hasSize(2);
+            assertThat(errors).isEmpty();
+        });
+    }
+
+    @Test
+    @RunAsAdmin
+    public void testImportEssayQuestionPlainText() throws IOException {
+        String content = Files.readString(Path.of("test/resources/essay-quiz2.xml"));
+        User user = getLoggerUser();
+        running(app, () -> {
+            MoodleXmlImporter converter = app.injector().instanceOf(MoodleXmlImporter.class);
+            var report = converter.convert(content, user);
+            var questions = CollectionConverters.asJava(report._1);
+            var errors = CollectionConverters.asJava(report._2);
+            assertThat(questions).hasSize(1);
+            assertThat(questions.getFirst().getTags()).hasSize(2);
+            assertThat(errors).isEmpty();
         });
     }
 
@@ -41,9 +58,12 @@ public class MoodleImporterTest extends IntegrationTestCase {
         User user = getLoggerUser();
         running(app, () -> {
             MoodleXmlImporter converter = app.injector().instanceOf(MoodleXmlImporter.class);
-            List<Question> questions = CollectionConverters.asJava(converter.convert(content, user));
+            var report = converter.convert(content, user);
+            var questions = CollectionConverters.asJava(report._1);
+            var errors = CollectionConverters.asJava(report._2);
             assertThat(questions).hasSize(1);
-            assertThat(questions.get(0).getOptions()).hasSize(4);
+            assertThat(questions.getFirst().getOptions()).hasSize(4);
+            assertThat(errors).isEmpty();
         });
     }
 
@@ -54,9 +74,12 @@ public class MoodleImporterTest extends IntegrationTestCase {
         User user = getLoggerUser();
         running(app, () -> {
             MoodleXmlImporter converter = app.injector().instanceOf(MoodleXmlImporter.class);
-            List<Question> questions = CollectionConverters.asJava(converter.convert(content, user));
+            var report = converter.convert(content, user);
+            var questions = CollectionConverters.asJava(report._1);
+            var errors = CollectionConverters.asJava(report._2);
             assertThat(questions).hasSize(1);
-            assertThat(questions.get(0).getOptions()).hasSize(4);
+            assertThat(questions.getFirst().getOptions()).hasSize(4);
+            assertThat(errors).isEmpty();
         });
     }
 }
